--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# Core FastAPI dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+# Core FastAPI dependencies (using versions with pre-built wheels)
+fastapi==0.103.0
+uvicorn==0.23.2
 
 # Lightweight vector DB and embedding
 chromadb==0.4.15
@@ -9,5 +9,5 @@ sentence-transformers==2.2.2
 # HTTP requests
 requests==2.31.0
 
-# Essential dependencies only - no heavy ML frameworks
-pydantic==2.4.2
+# Use older pydantic version with pre-built wheels
+pydantic==1.10.12
