--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     plan: free
     region: singapore
     buildCommand: |
-      pip install --no-cache-dir --upgrade pip &&
-      pip install --no-cache-dir -r requirements.txt
+      pip install --upgrade pip &&
+      pip install --only-binary=all --no-compile -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000 --workers 1
     autoDeploy: true
     envVars:
